# code_C.A.L.

./: .env.example  .gitignore  CLAUDE.md  CURRICULUM.md  SUPPLEMENTS.md  pyproject.toml  requirements.txt
notes/: file_io_streaming.md
practice/experiments/: auth_pattern.py  error_handling.py  fetch_with_retry.py  first_llm_call.py  first_request.py  pagination.py  pagination_session.py  parameterized_request.py  safe_request.py  type_hints.py
practice/experiments/api_http_arc/: query_strings.py
practice/experiments/async_arc/: L01_event_loop.py  L02_tasks.py  L03_exceptions.py  L04_real_world.py
practice/experiments/auth_arc/: L01_hashing.py  L02_jwt.py  L03_fastapi_auth.py  L03_test_drive.py  L04_test_drive.py  L04_users_db.py  L05_roles_db.py  L05_test_drive.py  L06_sessionmaker.py  L07_leaks.py  test_L06_auth.py
practice/experiments/fastapi_arc/: L02_params.py  L03_request_body.py  L04_response_model.py  L05_dependencies.py  L06_async_endpoints.py  L07_bg.py  L07_errors.py  main.py
practice/experiments/sql_arc/: lesson_01_select.py  lesson_02_sorting.py  lesson_03_join.py  lesson_04_schema.py  lesson_06_transactions.py  lesson_07_injections.py
practice/experiments/sqlalchemy_arc/: L01_first_model.py  L02_querying.py  L03_relationships.py  L05_raw_sql.py
practice/experiments/sqlalchemy_arc/L04_alembic/: alembic.ini  models.py
practice/experiments/testing_arc/: api_client.py  math_utils.py  safety.py  test_math_utils.py
projects/insideout_but_cooler/: brain_project.py
(+2 files in other folders)
